force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Total_Hours__c</fullName>
    <formula>Sunday_Time_2__c + Sunday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>