force-app/main/default/objects/Connects_Worker_Time__c/fields/Supervisor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Comments__c</fullName>
    <label>Supervisor Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>