force-app/main/default/objects/Connects_Worker_Time__c/fields/Supervisor_Corrections__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Corrections__c</fullName>
    <label>Supervisor Corrections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>