force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_ADP_Time_In_1__c.field-meta.xml
<CustomField>
    <fullName>Thursday_ADP_Time_In_1__c</fullName>
    <formula>if (isblank( Thursday_Lunch_Start__c ), Thursday_Time_In__c ,
if ( Thursday_Lunch_End_Proxy__c &lt;= Thursday_Time_In_Proxy__c , Thursday_Time_In__c ,
if ( Thursday_Lunch_Start_Proxy__c &lt;= Thursday_Time_In_Proxy__c , Thursday_Lunch_End__c ,
Thursday_Time_In__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday ADP Time In (#1)</label>
    <type>Text</type>
</CustomField>