force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_ADP_Time_In_2__c.field-meta.xml
<CustomField>
    <fullName>Thursday_ADP_Time_In_2__c</fullName>
    <formula>if (isblank( Thursday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Thursday_Lunch_Start_Proxy__c &gt;= Thursday_Time_Out_Proxy__c
|| Thursday_Lunch_End_Proxy__c &gt;= Thursday_Time_Out_Proxy__c
|| Thursday_Lunch_Start_Proxy__c &lt;= Thursday_Time_In_Proxy__c , &quot;Lunch Out of Range&quot;, Thursday_Lunch_End__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday ADP Time In (#2)</label>
    <type>Text</type>
</CustomField>