force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Date__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Date__c</fullName>
    <formula>Week_Beginning__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday Date</label>
    <type>Date</type>
</CustomField>