force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Lunch_Start__c</fullName>
    <label>Thursday Lunch Start</label>
    <length>8</length>
    <type>Text</type>
</CustomField>