force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_1__c</fullName>
    <formula>if ( isblank( Thursday_Time_In__c) &amp;&amp; isblank ( Thursday_Time_Out__c), 0,

if ( isblank(Thursday_Lunch_End__c) &amp;&amp; isblank(Thursday_Lunch_Start__c),

( 

(floor(Thursday_Time_Out_Proxy__c) + (Thursday_Time_Out_Proxy__c- floor(Thursday_Time_Out_Proxy__c))/60*100)

- (floor(Thursday_Time_In_Proxy__c) + (Thursday_Time_In_Proxy__c- floor(Thursday_Time_In_Proxy__c))/60*100)

),

( 

(floor(Thursday_Lunch_Start_Proxy__c ) + (Thursday_Lunch_Start_Proxy__c - floor(Thursday_Lunch_Start_Proxy__c ))/60*100)

- (floor(Thursday_Time_In_Proxy__c) + (Thursday_Time_In_Proxy__c- floor(Thursday_Time_In_Proxy__c))/60*100)

)

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday Time (#1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>