force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_2__c</fullName>
    <formula>if (

isblank(Thursday_Lunch_End__c) &amp;&amp; isblank(Thursday_Lunch_Start__c),

NULL,

(

(floor(Thursday_Time_Out_Proxy__c ) + (Thursday_Time_Out_Proxy__c- floor(Thursday_Time_Out_Proxy__c))/60*100))

- (floor(Thursday_Lunch_End_Proxy__c ) + (Thursday_Lunch_End_Proxy__c - floor(Thursday_Lunch_End_Proxy__c ))/60*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday Time (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>