force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_In__c</fullName>
    <label>Thursday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>