force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Time_In_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_In_Proxy__c</fullName>
    <label>Thursday Time In Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>