force-app/main/default/objects/Connects_Worker_Time__c/fields/Thursday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Total_Hours__c</fullName>
    <formula>Thursday_Time_2__c + Thursday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>