force-app/main/default/objects/Connects_Worker_Time__c/fields/Total_Intern_Wage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Intern_Wage_Cost__c</fullName>
    <label>Total Worker Wage Cost</label>
    <summarizedField>Connects_Worker_Time_Detail__c.Intern_Total_Wages_Copy__c</summarizedField>
    <summaryForeignKey>Connects_Worker_Time_Detail__c.Connects_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>