force-app/main/default/objects/Connects_Worker_Time__c/fields/Total_Intern_Worker_s_Comp_WC__c.field-meta.xml
<CustomField>
    <fullName>Total_Intern_Worker_s_Comp_WC__c</fullName>
    <formula>Total_Intern_Wage_Cost__c * Worker_s_Comp_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Worker Worker&apos;s Comp (WC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>