force-app/main/default/objects/Connects_Worker_Time__c/fields/Total_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekly_Hours__c</fullName>
    <label>Total Weekly Hours</label>
    <summarizedField>Connects_Worker_Time_Detail__c.ADP_Total_Hours__c</summarizedField>
    <summaryForeignKey>Connects_Worker_Time_Detail__c.Connects_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>