force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_ADP_Time_Out_2__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_ADP_Time_Out_2__c</fullName>
    <formula>if (isblank( Tuesday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Tuesday_Lunch_Start_Proxy__c &gt;= Tuesday_Time_Out_Proxy__c
|| Tuesday_Lunch_End_Proxy__c &gt;= Tuesday_Time_Out_Proxy__c
|| Tuesday_Lunch_Start_Proxy__c &lt;= Tuesday_Time_In_Proxy__c, &quot;Lunch Out of Range&quot;,
Tuesday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday ADP Time Out (#2)</label>
    <type>Text</type>
</CustomField>