force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Date__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Date__c</fullName>
    <formula>Week_Beginning__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Date</label>
    <type>Date</type>
</CustomField>