force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Lunch_End__c</fullName>
    <label>Tuesday Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>