force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_1__c</fullName>
    <formula>if ( isblank(Tuesday_Time_In__c) &amp;&amp; isblank (Tuesday_Time_Out__c), 0,

if ( isblank(Tuesday_Lunch_End__c) &amp;&amp; isblank(Tuesday_Lunch_Start__c),

( 

(floor(Tuesday_Time_Out_Proxy__c) + (Tuesday_Time_Out_Proxy__c- floor(Tuesday_Time_Out_Proxy__c))/60*100)

- (floor(Tuesday_Time_In_Proxy__c) + (Tuesday_Time_In_Proxy__c- floor(Tuesday_Time_In_Proxy__c))/60*100)

),

( 

(floor(Tuesday_Lunch_Start_Proxy__c ) + (Tuesday_Lunch_Start_Proxy__c - floor(Tuesday_Lunch_Start_Proxy__c ))/60*100)

- (floor(Tuesday_Time_In_Proxy__c) + (Tuesday_Time_In_Proxy__c- floor(Tuesday_Time_In_Proxy__c))/60*100)

)

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Time (#1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>