force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_In__c</fullName>
    <label>Tuesday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>