force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_Out__c</fullName>
    <label>Tuesday Time Out</label>
    <length>8</length>
    <type>Text</type>
</CustomField>