force-app/main/default/objects/Connects_Worker_Time__c/fields/Tuesday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Total_Hours__c</fullName>
    <formula>Tuesday_Time_2__c + Tuesday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>