force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_ADP_Time_In_2__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_ADP_Time_In_2__c</fullName>
    <formula>if (isblank( Wednesday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Wednesday_Lunch_Start_Proxy__c &gt;= Wednesday_Time_Out_Proxy__c
|| Wednesday_Lunch_End_Proxy__c &gt;= Wednesday_Time_Out_Proxy__c
|| Wednesday_Lunch_Start_Proxy__c &lt;= Wednesday_Time_In_Proxy__c , &quot;Lunch Out of Range&quot;,
Wednesday_Lunch_End__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday ADP Time In (#2)</label>
    <type>Text</type>
</CustomField>