force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_ADP_Time_Out_1__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_ADP_Time_Out_1__c</fullName>
    <formula>if (isblank( Wednesday_Lunch_Start__c )
|| Wednesday_Lunch_End_Proxy__c &lt;= Wednesday_Time_In_Proxy__c
|| Wednesday_Lunch_Start_Proxy__c &lt;= Wednesday_Time_In_Proxy__c , Wednesday_Time_Out__c ,
if (Wednesday_Lunch_Start_Proxy__c &lt;= Wednesday_Time_Out_Proxy__c , Wednesday_Lunch_Start__c ,
Wednesday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>