force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Date__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Date__c</fullName>
    <formula>Week_Beginning__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday Date</label>
    <type>Date</type>
</CustomField>