force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Lunch_End__c</fullName>
    <label>Wednesday Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>