force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Lunch_End_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Lunch_End_Proxy__c</fullName>
    <label>Wednesday Lunch End Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>