force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_1__c</fullName>
    <formula>if ( isblank(Wednesday_Time_In__c) &amp;&amp; isblank (Wednesday_Time_Out__c), 0,

if ( isblank(Wednesday_Lunch_End__c) &amp;&amp; isblank(Wednesday_Lunch_Start__c),

( 

(floor(Wednesday_Time_Out_Proxy__c) + (Wednesday_Time_Out_Proxy__c- floor(Wednesday_Time_Out_Proxy__c))/60*100)

- (floor(Wednesday_Time_In_Proxy__c) + (Wednesday_Time_In_Proxy__c- floor(Wednesday_Time_In_Proxy__c))/60*100)

),

( 

(floor(Wednesday_Lunch_Start_Proxy__c ) + (Wednesday_Lunch_Start_Proxy__c- floor(Wednesday_Lunch_Start_Proxy__c))/60*100)

- (floor(Wednesday_Time_In_Proxy__c) + (Wednesday_Time_In_Proxy__c- floor(Wednesday_Time_In_Proxy__c))/60*100)

)

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday Time (#1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>