force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_2__c</fullName>
    <formula>if (

isblank(Wednesday_Lunch_End__c) &amp;&amp; isblank(Wednesday_Lunch_Start__c),

NULL,

(

(floor(Wednesday_Time_Out_Proxy__c ) + (Wednesday_Time_Out_Proxy__c - floor(Wednesday_Time_Out_Proxy__c ))/60*100))

- (floor(Wednesday_Lunch_End_Proxy__c ) + (Wednesday_Lunch_End_Proxy__c - floor(Wednesday_Lunch_End_Proxy__c ))/60*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday Time (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>