force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_In__c</fullName>
    <label>Wednesday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>