force-app/main/default/objects/Connects_Worker_Time__c/fields/Wednesday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Total_Hours__c</fullName>
    <formula>Wednesday_Time_2__c + Wednesday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>