force-app/main/default/objects/Connects_Worker_Time__c/fields/Week_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Week_Beginning__c</fullName>
    <description>Please enter Sunday&apos;s date.</description>
    <label>Week Beginning</label>
    <required>true</required>
    <type>Date</type>
</CustomField>