force-app/main/default/objects/Connects_Worker_Time__c/fields/Worked_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Worked_In_Location__c</fullName>
    <formula>if ( isblank( Send_Out_Employment__r.Organization_TCP__r.ParentId ), NULL, Send_Out_Employment__r.Organization_TCP__r.Department_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worked-In Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>