force-app/main/default/objects/Connects_Worker_Time__c/validationRules/Friday_Time_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Friday_Time_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (isblank ( Friday_Time_In__c) &amp;&amp; isblank( Friday_Time_Out__c ), FALSE,

if (contains(Friday_Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Friday_Time_Out__c , &quot;PM&quot;), FALSE,

if (contains(Friday_Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Friday_Time_Out__c , &quot;AM&quot;), TRUE,

if (contains(Friday_Time_In__c, &quot;12:&quot;) &amp;&amp; not(contains (Friday_Time_Out__c , &quot;12:&quot;)), FALSE,

if (contains(Friday_Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Friday_Time_Out__c , &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Friday_Time_Out__c , &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Friday_Time_In__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE,

if (contains(Friday_Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Friday_Time_Out__c , &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Friday_Time_Out__c , &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Friday_Time_In__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE,

TRUE))))))</errorConditionFormula>
    <errorMessage>&apos;Time Out&apos; should be after &apos;Time In&apos;</errorMessage>
</ValidationRule>