force-app/main/default/objects/Connects_Worker_Time__c/validationRules/Lunch_End_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Lunch_End_Format</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT(REGEX( Sunday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Sunday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Sunday_Lunch_End__c )))

||

(NOT(REGEX( Monday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Monday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Monday_Lunch_End__c )))

||

(NOT(REGEX( Tuesday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Tuesday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Tuesday_Lunch_End__c )))

||

(NOT(REGEX( Wednesday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Wednesday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Wednesday_Lunch_End__c )))

||

(NOT(REGEX( Thursday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Thursday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Thursday_Lunch_End__c )))

||

(NOT(REGEX(Friday_Lunch_End__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Friday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Friday_Lunch_End__c )))

||

(NOT(REGEX( Saturday_Lunch_End__c , &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT(REGEX(Saturday_Lunch_End__c , &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;))

&amp;&amp; NOT (isblank (Saturday_Lunch_End__c )))</errorConditionFormula>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>