force-app/main/default/objects/Connects_Worker_Time__c/validationRules/Monday_Lunch_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Monday_Lunch_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (isblank ( Monday_Lunch_Start__c ) &amp;&amp; isblank(Monday_Lunch_End__c), FALSE,

if (contains(Monday_Lunch_Start__c , &quot;AM&quot;) &amp;&amp; contains (Monday_Lunch_End__c, &quot;PM&quot;), FALSE,

if (contains(Monday_Lunch_Start__c , &quot;PM&quot;) &amp;&amp; contains (Monday_Lunch_End__c, &quot;AM&quot;), TRUE,

if (contains(Monday_Lunch_Start__c , &quot;12:&quot;) &amp;&amp; not(contains (Monday_Lunch_End__c, &quot;12:&quot;)), FALSE,

if (contains(Monday_Lunch_Start__c , &quot;AM&quot;) &amp;&amp; contains (Monday_Lunch_End__c, &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Monday_Lunch_End__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Monday_Lunch_Start__c , &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE,

if (contains(Monday_Lunch_Start__c , &quot;PM&quot;) &amp;&amp; contains (Monday_Lunch_End__c, &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Monday_Lunch_End__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Monday_Lunch_Start__c , &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE,

TRUE))))))</errorConditionFormula>
    <errorMessage>&apos;Lunch End&apos; should be after &apos;Lunch Start&apos;, and both or neither should be filled in.</errorMessage>
</ValidationRule>